# Webscraper-Tool

./: main.py  parse.py  pyproject.toml  scrape.py
