[project]
name = "ai-webscraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.4",
    "lxml>=6.0.0",
    "python-dotenv>=1.1.1",
    "selenium>=4.34.2",
    "streamlit>=1.46.1",
]
